# visual_graph_datasets

./: DEVELOP.rst  HISTORY.rst  README.rst  large_push.py  pypackage.toml  pyproject.toml
tadf/: 0.json  1.json  10.json  100.json  1000.json  10000.json  100000.json  100001.json  100002.json  100003.json  100004.json  100005.json  100006.json  100007.json  100008.json  100009.json  10001.json  100010.json  100011.json  100012.json  100013.json  100014.json  100015.json  100016.json  100017.json  100018.json  100019.json  10002.json  100020.json  100021.json  100022.json  100023.json  100024.json  100025.json  100026.json  100027.json  100028.json  100029.json  10003.json  100030.json  (+457367 more)
tests/: test_config.py  test_data.py  test_datasets.py  test_generation_graph.py  test_util.py  test_visualization_base.py  test_visualization_color.py  test_visualization_colors.py  test_visualization_importances.py  test_visualization_molecules.py  test_web.py  util.py
tests/artifacts/: README.rst
tests/assets/: README.rst  g_color.json  g_grayscale.json
visual_graph_datasets/: cli.py  config.py  data.py  testing.py  typing.py  util.py  web.py
visual_graph_datasets/examples/: readme_00.py
visual_graph_datasets/experiments/: generate_benzene_solubility_from_csv.py  generate_mock.py  generate_molecule_dataset_from_csv.py  generate_molecule_multitask_dataset_from_csv.py  update_rb_colors.py
visual_graph_datasets/generation/: graph.py
visual_graph_datasets/processing/: base.py  molecules.py
visual_graph_datasets/templates/: config.yaml.j2  list.out.j2
(+104 files in other folders)
